--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
   <!-- main -->
-  <link rel="stylesheet" href="./index_2.css">
+  <link rel="stylesheet" href="./index.css">
 
 
 </head>
@@ -120,11 +120,10 @@
                                                      2022.01.22</pre>
 
       <p class="from"><span class="this_year"></span>2022.01.22</p>
-      <script type="text/javascript" src="js/getYear.js"></script>
     </div>
   </div>
 
-  <script type="text/javascript" src="./index_2.js"></script>
+  <script type="text/javascript" src="./index.js"></script>
 </body>
 
 </html>
