--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:image"
     content="https://images.unsplash.com/photo-1544277879-42659615e478?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1056&q=80">
   <meta property="og:title" content="똑똑!">
-  <meta property="og:description" content="2022 Happy Birthday">
+  <meta property="og:description" content="Happy Birthday">
 
   <script src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/xmas/snow.js"></script>
 
