--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 생일 진심으로 축하드립니당♡
                                                      2022.01.22</pre>
 
-      <p class="from"><span class="this_year"></span>2022.01.22</p>
+      <!-- <p class="from"><span class="this_year"></span>2022.01.22</p> -->
     </div>
   </div>
 
