--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         작가님 건강히 지내고 계신거죠? 아프면 안돼요!<br />
         아직 겨울이 많이 춥지만, 금방 또 따뜻해질테니<br />
         작가님도 따땃한 날들 보내시길 바랄게요<br />
-        올해는 작년보다 웃는 날이 더 가득하실 수 있게<br />
-        작가님을 더 많이 많이 응원할게요<br />
+        올해는 작년보다 웃는 날이 더 가득하도록<br />
+        제가 더 많이 많이 응원할게요<br />
         오늘만큼은 그 누구보다 작가님의 행복이<br />
         최우선이라는 거 잊지마시고,<br />
         맛있는 거 많이 드시면서 즐겁게 보내세요!<br />
@@ -110,7 +110,7 @@
 아직 겨울이 많이 춥지만, 금방 또 따뜻해질테니 
 작가님도 따땃한 날들 보내시길 바랄게요
 올해는 작년보다 웃는 날이 더 가득하실 수 있게 
-작가님을 많이 많이 응원할게요
+제가 더 많이 많이 응원할게요
 오늘만큼은 그 누구보다 작가님의 행복이
 최우선이라는 거 잊지마시고,
 맛있는 거 많이 드시면서 즐겁게 보내세요!
