--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     href="./images/cake_icon.png" class="cake-icon">
 
   <!--링크 미리보기: OpenGraph Tag(op)-->
-  <meta property="og:image"
-    content="https://images.unsplash.com/photo-1544277879-42659615e478?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1056&q=80">
+  <!-- <meta property="og:image"
+    content="https://images.unsplash.com/photo-1544277879-42659615e478?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1056&q=80"> -->
+    <!-- <meta property="og:image"
+    content="./images/cover_img.png"> -->
+    <meta property="og:image"
+    src="./images/cover_img.png">
   <meta property="og:title" content="똑똑!">
   <meta property="og:description" content="Happy Birthday">
 
