--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </p>
           <span class="arrow-right"></span>
           <span class="arrow"></span>
-          <p class="close">아니오
+          <p class="close">아니요
             <span class="close-arrow"></span>
           </p>
         </div>
